--- a/app/views/jobs/index.html.haml
+++ b/app/views/jobs/index.html.haml
@@ -1,6 +1,6 @@
 %h1 This is index page
 - @jobs.each do |job|
-    %h2= job.title
+    %h2= link_to job.title, job_path(job)
     %p= job.description
     %p= job.company
     %p= job.url
