add search form in application.html.haml file

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,6 +9,11 @@
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
   %body
+
+    %form.form-inline.my-2.my-lg-0{action: "/search"}
+      %input.form-control.mr-sm-2{"aria-label" => "Search", placeholder: "Search", name: "q", type: "text"}/
+      %button.btn.btn-outline-success.my-2.my-sm-0{type: "submit"} Search
+
     -Category.all.each do |category|
       = link_to category.name, jobs_path(category: category.name)
     = yield
