--- a/app/views/jobs/_form.html.haml
+++ b/app/views/jobs/_form.html.haml
@@ -1,7 +1,7 @@
 = simple_form_for(@job, html: {class: 'form-horizontal'}) do |f|
     = f.collection_select :category_id, Category.all, :id, :name, {promt: "Choose a category"}
     = f.input :title, label: "Job Title"
-    = f.input :description, label: "Job Description"
+    = f.rich_text_area :description, label: "Job Description"
     = f.input :company, label: "Your Company"
     = f.input :url, label: "Job Link to job"
     %br
