--- a/app/views/jobs/_job.html.haml
+++ b/app/views/jobs/_job.html.haml
@@ -1,7 +1,14 @@
-- @jobs.each do |job|
-    %h2= link_to job.title, job_path(job)
-    %p= job.description
-    %p= job.company
-    %p= job.url
 
-= link_to "New Job", new_job_path
+
+.container
+    - @jobs.each do |job|
+
+            
+
+        .card
+            .card-body
+                %h2= link_to job.title, job_path(job)
+                %p.card-text= job.description
+                %p.card-text= job.company
+                %p.card-text= job.url
+        %br
