--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,12 +14,15 @@
 
     %nav.navbar.navbar-expand-sm.bg-light
       %ul.navbar-nav
-      -Category.all.each do |category|
-        %li.nav-item
-          .nav-link
-            = link_to category.name, jobs_path(category: category.name)
 
-      %form.form-inline{action: "/search"}
-        %input.form-control.mr-sm-2{"aria-label" => "Search", placeholder: "Search", name: "q", type: "text"}/
+        -Category.all.each do |category|
+
+          %li.nav-item
+            .nav-link
+              = link_to category.name, jobs_path(category: category.name)
+        = link_to "New Job", new_job_path, :class => "btn btn-primary"
+
+      %form.form-inline.ml-auto{action: "/search"}
+        %input.form-control.mr-sm-2{"aria-label" => "Search", placeholder: "Search for jobs", name: "q", type: "text"}/
         %button.btn.btn-outline-success.my-2.my-sm-0{type: "submit"} Search
     = yield
