--- a/app/views/jobs/show.html.haml
+++ b/app/views/jobs/show.html.haml
@@ -1,7 +1,10 @@
-%h1= @job.title
-%p= @job.description
-%p= @job.company
+.container
+    .card
+        .card-body
+            %h1= @job.title
+            %p= @job.description
+            %p= @job.company
 
-= link_to "Home", root_path
-= link_to "Edit", edit_job_path
-= link_to "Destroy", job_path(@job), method: :delete, data: {confirm: "Are you sure?"}
+            = link_to "Home", root_path
+            = link_to "Edit", edit_job_path
+            = link_to "Destroy", job_path(@job), method: :delete, data: {confirm: "Are you sure?"}
